Ensure compatibility with java 8